--- a/index.html
+++ b/index.html
@@ -161,5 +161,18 @@
             <img src="img/Rectangle (9).png" alt="photo">
         </div>
     </section>
+    <section class="bg-br">
+       <div class="br-cake">
+            <img class="cake" src="img/image 1.png" alt="icon">
+            <p>The most-loved translation management software</p>
+            <img class="star" src="img/Frame (9).png" alt="icon">
+       </div>
+    </section>
+    <section class="bird">
+        <p class="bird-item">Integrate Lokalise with your work tools</p>
+        <p class="bird-text">Automate processes, eliminate routine tasks, and track progress with ease.</p>
+        <img src="img/pic.png" alt="picture">
+        <button type="button" class="btn-bird">See all integrations</button>
+    </section>
 </body>
 </html>
