--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
 </head>
 <body>
     <header class="header">
-            <ul>
-                <li class="list"><img class="logo" src="img/Group (1).png" alt="logo"></li>
-                <li class="list"><a href="">Product<a></li>
+            <ul class="header-list">
+                <li class="list lokalise"><a href="">Product<a></li>
                 <li class="list"><a href="">Features</a></li>
                 <li class="list"><a href="">Pricing</a></li>
                 <li class="list"><a href="">Case studies</a></li>
                 <li class="list"><a href="">Resources</a></li>
             </ul>
         <div class="btns">
-            <button class="btn log" type="button">Log in</button>
-            <button class="btn try" type="button">Try it free</button>
+            <button class="btn log" type="button"><a href="">Log in</<a href=""></a></button>
+            <button class="btn try" type="button"><a href="">Try it free</<a href=""></a></button>
         </div>
     </header> <hr>
     <main class="conteiner">
@@ -27,8 +26,8 @@
             <h1>Accelerate localization from code to delivery</h1>
             <p class="text">A localization and translation management platform for agile teams. Embrace automation, workflow transparency, and fast project delivery.</p>
             <div class="btns">
-                <button type="button" class="btn free">Try it free</button>
-                <button type="button" class="btn book">Book a demo</button>
+                <button type="button" class="btn free"><a href=""> Try it free</a></button>
+                <button type="button" class="btn book"><a href=""> Book a demo</a></button>
             </div>
             <p class="under-text">Try all features for 14 days · No credit card required</p>
         </div>
@@ -57,10 +56,10 @@
                 <p class="link"><a href="">Start now</a></p>
             </div>
         </div>
-        <div class="card picture">
+        <div class="card-picture">
             <img src="img/1111 1.png" alt="picture">
         </div>
-        <div class="card picture">
+        <div class="card-picture">
             <img src="img/2222 1.png" alt="picture">
         </div>
         <div class="container-story">
@@ -77,10 +76,10 @@
             <p class="link"><a href="">Start now</a></p>
         </div>
     </div>
-        <div class="card picture">
+        <div class="card-picture">
             <img src="img/3333 1.png" alt="picture">
         </div>
-        <div class="card picture">
+        <div class="card-picture">
             <img src="img/Frame (8).png" alt="picture">
         </div>
         <div class="container-story">
@@ -162,17 +161,87 @@
         </div>
     </section>
     <section class="bg-br">
-       <div class="br-cake">
+        <div class="br-cake">
             <img class="cake" src="img/image 1.png" alt="icon">
             <p>The most-loved translation management software</p>
             <img class="star" src="img/Frame (9).png" alt="icon">
-       </div>
+        </div>
     </section>
     <section class="bird">
         <p class="bird-item">Integrate Lokalise with your work tools</p>
         <p class="bird-text">Automate processes, eliminate routine tasks, and track progress with ease.</p>
-        <img src="img/pic.png" alt="picture">
-        <button type="button" class="btn-bird">See all integrations</button>
+        <div class="bird-img"><img src="img/pic.png" alt="picture"></div>
+        <button type="button" class="btn-bird"><a href="">See all integrations</a></button>
     </section>
+    <section class="bg-peach">
+        <p class="peach-item" >Localization made easy. Why wait?</p>
+        <p class="peach-text" >Try for free or let us show you how it works.</p>
+        <button  class="peach-btn" type="button"><a href="">Try it free</a></button>
+    </section>
+    <section class="bg-footer">
+        <div class="footer-content">
+            <div><p class="content-item">Case Studies</p></div>
+            <div><img class="content-picture" src="img/Rectangle (10).png" alt="photo"></img></div>
+            <div><img class="content-logo" src="img/Frame (7).png" alt="logo"></img></div>
+            <div><p class="content-text">Riding towards global success with a 100% teammate enthusiasm</p></div>
+            <div><p class="content-link"><a href="">Read more</a></p></div>
+        </div>
+        <div> 
+        <ul class="footer-list">
+            <li>Product</li>
+            <li>For developers</li>
+            <li>For managers</li>
+            <li>For translators</li>
+            <li>For designers</li>
+            <li>Integrations</li>
+            <li>Security</li>
+            <li>Pricing</li>
+            <li>Automations</li>
+        </ul>
+        </div>
+        <div>
+        <ul class="footer-list">
+            <li>Support</li>
+            <li>Contact</li>
+            <li>Documentation</li>
+            <li>Status</li>
+            <li>Product Updates</li>
+            <li>CLI Tool</li>
+            <li>API Reference</li>
+            <li>iOS and Android SDK</li>
+            <li>Supported File Formats</li>
+        </ul>
+        </div>
+        <div>
+        <ul class="footer-list">
+            <li>Company</li>
+            <li>About</li>
+            <li>Blog</li>
+            <li>Careers | We`re Hiring</li>
+            <li>Case Studies</li>
+            <li>Media Kit</li>
+        </ul>
+        </div>
+        <div>
+        <ul class="footer-list">
+            <li>Legal</li>
+            <li>Terms of Service</li>
+            <li>Privacy Policy</li>
+            <li>Cookie Policy</li>
+            <li>Privacy Shield</li>
+            <li>DPA</li>
+            <li>List of Sub-processors</li>
+            <li>Candidates Privacy Notice</li>
+        </ul>
+        </div>
+    </section>
+    <hr>
+    <footer class="ft">   
+            <p class="ft-text">Localization workflow for your web and mobile apps, games and digital content.</p>
+        <div class="ft-year">
+            <p class>©2001-2020 </p>
+            <p class>All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
