--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                         <li class="list"><a href="">Resources</a></li>
                     </ul>
                 <div class="header-btns">
-                    <button class="btn log" type="button"><a href="">Log in</<a href=""></a></button>
-                    <button class="btn try" type="button"><a href="">Try it free</<a href=""></a></button>
+                    <button class="btn log" type="button">Log in</button>
+                    <button class="btn try" type="button">Try it free</button>
                 </div>
             </div>
         </div>
@@ -37,8 +37,8 @@
                     <p class="cnt-item">Accelerate localization from code to delivery</p>
                     <p class="cnt-text">A localization and translation management platform for agile teams. Embrace automation, workflow transparency, and fast project delivery.</p>
                     <div class="btns">
-                        <button type="button" class="btn free"><a href=""> Try it free</a></button>
-                        <button type="button" class="btn book"><a href=""> Book a demo</a></button>
+                        <button type="button" class="btn free"> Try it free</button>
+                        <button type="button" class="btn book"> Book a demo</button>
                     </div>
                     <p class="under-text">Try all features for 14 days · No credit card required</p>
                 </div>
@@ -69,7 +69,7 @@
     <section class="cards">
         <div class="container-story">
             <div class="card-story">
-                <p class="cart-item">Control the localization process</p>
+                <p class="card-item">Control the localization process</p>
                 <p class="story">Collaborate with your team in a single workspace. Add and assign <a class="line" href="">tasks</a>, track progress, and enjoy a seamless localization workflow where you know who is doing what and when.</p>
                 <p class="link"><a href="">Start now</a></p>
             </div>
@@ -83,14 +83,14 @@
             <img src="img/2222 1.png" alt="picture">
         </div>
         <div class="card-story">
-            <p class="cart-item">Shorten time to market</p>
+            <p class="card-item">Shorten time to market</p>
             <p class="story">Localize your product in parallel with the development cycle. Use the <a class="line" href="<a></a>">Adobe XD</a>, <a class="line" href="<a></a>">Figma</a>, and <a class="line" href="<a></a>">Sketch</a> plugins to start working on translations as soon as the product design is ready. No more idle waiting.</p>
             <p class="link"><a href="">Start now</a></p>
         </div>
         </div>
         <div class="container-story">
         <div class="card-story">
-            <p class="cart-item">Ensure quality</p>
+            <p class="card-item">Ensure quality</p>
             <p class="story">Use built-in tools — e.g. <a class="line" href="">translation memory</a>, machine translation, and <a class="line" href="">QA checks</a> — to enhance the quality and cohesion of translations. Add product <a class="line" href="">screenshots</a> for context and use the <a class="line" href=""<a></a>>in-context</a> editors for instant previews.</p>
             <p class="link"><a href="">Start now</a></p>
         </div>
@@ -102,9 +102,8 @@
         <div class="card-picture">
             <img src="img/Frame (8).png" alt="picture">
         </div>
-        <div class="container-story">
         <div class="card-story">
-            <p class="cart-item">Less work for developers</p>
+            <p class="card-item">Less work for developers</p>
             <p class="story">Eliminate the hassle of localization and let developers get back to their main tasks. Save hours with the powerful <a class="line" href="">API</a>, <a class="line" href="">CLI</a>, <a class="line" href="">mobile SDKs</a>, and integrations with <a class="line" href=""> GitHub</a>, <a class="line" href="">Bitbucket</a>, <a class="line" href="">JIRA</a>, and more.</p>
             <p class="link"><a href="">Start now</a></p>
         </div>
@@ -155,19 +154,19 @@
         <p class="box-item">Boost your localization team’s productivity tenfold</p>
         <div class="boxs">
             <div class="box">
-                <img class="box-img" src="img/Rectangle (7).png" alt="icon">
+                <img class="box-img-1" src="img/Rectangle (7).png" alt="icon">
                 <p class="box-list">Managers</p>
                 <p class="box-text">Update existing and launch new features and products while simultaneously localizing them in multiple languages. Streamline your team's workflow, maximize productivity, and speed up expansion to other markets.</p>
                 <p class="box-link"><a href="">Learn more</a></p>
             </div>
             <div class="box">
-                <img class="box-img" src="img/Rectangle (8).png" alt="icon">
+                <img class="box-img-2" src="img/Rectangle (8).png" alt="icon">
                 <p class="box-list">Developers</p>
                 <p class="box-text">Set up an integration with your code repository or your own custom SDK via Lokalise's powerful API. Do that once, and every time you make changes in the code, they'll be automatically imported to Lokalise for translation.</p>
                 <p class="box-link"><a href="">Learn more</a></p>
             </div>
             <div class="box">
-                <img class="box-img" src="img/Rectangle (11).png" alt="icon">
+                <img class="box-img-3" src="img/Rectangle (11).png" alt="icon">
                 <p class="box-list">Translators</p>
                 <p class="box-text">Eliminate double-work and neverending revisions with visual context (screenshots) and live previews. Improve the quality and speed of your translations with built-in CAT tools, like autocomplete, inline machine translation, and translation memory.</p>
                 <p class="box-link"><a href="">Learn more</a></p>
@@ -176,21 +175,27 @@
     </section>
    
     <section class="bg-bl">
-        <div>
-            <p class="bl-text">“Lokalise has turned a task we were dreading into an absolute pleasure. Great platform, intuitive UX, powerful API. The automatic text recognition for screenshots has been a lifesaver, and over-the-air updates are the icing on the cake.”</p>
-            <p class="bl-name">Edward Cooper, Chief Mobile Officer</p>
-            <img src="img/Group (4).png" alt="icon">
-        </div>
-        <div class="photo">
-            <img src="img/Rectangle (9).png" alt="photo">
+        <div  class="bl">
+            <div>
+                <p class="bl-text">“Lokalise has turned a task we were dreading into an absolute pleasure. Great platform, intuitive UX, powerful API. The automatic text recognition for screenshots has been a lifesaver, and over-the-air updates are the icing on the cake.”</p>
+                <p class="bl-name">Edward Cooper, Chief Mobile Officer</p>
+                <img src="img/Group (4).png" alt="icon">
+            </div>
+            <div class="photo">
+                <img src="img/Rectangle (9).png" alt="photo">
+            </div>
         </div>
     </section>
 
     <section class="bg-br">
         <div class="br-cake">
-            <img class="cake" src="img/image 1.png" alt="icon">
-            <p>The most-loved translation management software</p>
-            <img class="star" src="img/Frame (9).png" alt="icon">
+            <div class="cake-text">
+                <img class="cake" src="img/image 1.png" alt="icon">
+                <p>The most-loved translation management software</p>
+            </div>
+            <div class="br-star">
+                <img class="star" src="img/Frame (9).png" alt="icon">
+            </div>
         </div>
     </section>
 
@@ -199,14 +204,16 @@
             <div class="bird-item"><p>Integrate Lokalise with your work tools</p></div>
             <div class="bird-text"><p>Automate processes, eliminate routine tasks, and track progress with ease.</p></div>
             <div class="bird-img"><img src="img/pic.png" alt="picture"></div>
-            <button type="button" class="btn-bird"><a href="">See all integrations</a></button>
+            <button type="button" class="btn-bird">See all integrations</button>
         </div>
     </section>
 
     <section class="bg-peach">
-        <p class="peach-item" >Localization made easy. Why wait?</p>
-        <p class="peach-text" >Try for free or let us show you how it works.</p>
-        <button  class="peach-btn" type="button"><a href="">Try it free</a></button>
+        <div class="peach">
+            <p class="peach-item" >Localization made easy. Why wait?</p>
+            <p class="peach-text" >Try for free or let us show you how it works.</p>
+            <button  class="peach-btn" type="button">Try it free</button>
+        </div>
     </section>
 
     <section class="bg-footer">
@@ -221,7 +228,7 @@
         </div>
         <div class="footer-content"> 
         <ul class="footer-list">
-            <li class="fr-list">Product</li>
+            <li><div class="fr-list">Product</div></li>
             <li>For developers</li>
             <li>For managers</li>
             <li>For translators</li>
@@ -234,7 +241,7 @@
         </div>
         <div class="footer-content">
         <ul class="footer-list">
-            <li class="fr-list">Support</li>
+            <li><div class="fr-list">Support</div></li>
             <li>Contact</li>
             <li>Documentation</li>
             <li>Status</li>
@@ -247,7 +254,7 @@
         </div>
         <div class="footer-content">
         <ul class="footer-list">
-            <li class="fr-list">Company</li>
+            <li><div class="fr-list">Company</div></li>
             <li>About</li>
             <li>Blog</li>
             <li>Careers | We`re Hiring</li>
@@ -257,7 +264,7 @@
         </div>
         <div class="footer-content">
         <ul class="footer-list">
-            <li class="fr-list">Legal</li>
+            <li><div class="fr-list">Legal</div></li>
             <li>Terms of Service</li>
             <li>Privacy Policy</li>
             <li>Cookie Policy</li>
